todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: mahansa/todo-app:latest  # Change this to your Docker Hub repo
          #env:
          #  - name: PORT
          #    value: "8080"
          #ports:
          #  - containerPort: 8080
